other/only-trustworthy-registries-set-root/.kyverno-test/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-root-user
spec:
  containers:
  - name: busybox
    image: busybox:1.28
